css/stylesheet.css
@font-face {
  font-family: custom;
  src: url(../Montserrat-Regular.ttf);
}
@font-face {
  font-family: Roboto;
  src: url(../Roboto-Regular.ttf);
}

p {
  font-family: custom;
  font-weight: 300;
}

/* Variables */
:root {
  --colors-background-dark: #414042;
  background-color: #dbdddc;
  --colors-text-light: #fff;
  --colors-text-highlight: #e79f37;
  --colors-text-dark: #000;
  --fonts-normal-text: arial, verdana;
}

/* Small resets */
* {
  box-sizing: border-box;
}
html,
body,
form {
  padding: 0px;
  margin: 0px;
}

.content {
  height: 3em;
  display: grid;
  margin: 0 12%;
}

form {
  display: grid;
}

.submit {
  display: grid;
  justify-self: center;
  margin-top: 20%;
  width: 25%;
  height: 45%;
  border-radius: 25px;
  border: 0 solid #414042;
  background-color: #e79f37;
  font-family: Roboto;
  color: #414042;
  -webkit-box-shadow: 1px 1px 3px 0.5px #606060;
  -moz-box-shadow: 1px 1px 3px 0.5px #606060;
  box-shadow: 1px 1px 3px 0.5px #606060;
}

.input {
  outline: 0;
  border-width: 0 0 2px;
  border-color: #e79f37;

  padding: 20px;
  height: 20px;
  font-family: Montserrat;
  font-weight: 300;
  color: #414042;
  background-color: #c1d3db;
}

.logo {
  display: flex;
  margin: auto;
  margin: 25% 0 15% 0;
  width: 18em;
}

/* Other elements */
header {
  width: 100%;
  height: 100vh;
  text-align: center;

  display: contents;
  overflow: hidden;
}

.header {
  background-color: #6e9fbc;
}

.arrow {
  margin: 15px;
  width: 30px;
  height: 30px;
}

.line {
  width: 100%;

  border-bottom: 1px solid gray;
}

h2 {
  font-family: Montserrat;
  font-size: 1em;
  font-weight: 400;
  color: #414042;
}

#spacing {
  margin-top: 20%;
}

@media only screen and (min-width: 600px) {
  .logo {
    margin: 20px auto 20px auto;
  }

  #spacing {
    margin-top: 20px;
  }

  form {
    width: 30%;
    justify-self: center;
  }

  .submit {
    margin: 50px;
  }
}

